[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/shader_wars/Counters.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Counters" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 82.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="."]
margin_right = 1543.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="PC" type="PanelContainer" parent="."]
margin_left = 1547.0
margin_right = 1700.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 146.0
margin_bottom = 75.0

[node name="HBC" type="HBoxContainer" parent="PC/VBC"]
margin_right = 139.0
margin_bottom = 20.0

[node name="TimeAvailableLabel" type="Label" parent="PC/VBC/HBC"]
margin_right = 124.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Time Available:"

[node name="TimeAvailable" type="Label" parent="PC/VBC/HBC"]
margin_left = 128.0
margin_right = 139.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="HBC2" type="HBoxContainer" parent="PC/VBC"]
margin_top = 24.0
margin_right = 139.0
margin_bottom = 44.0

[node name="SkillLabel" type="Label" parent="PC/VBC/HBC2"]
margin_right = 39.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Skill:"

[node name="Skill" type="Label" parent="PC/VBC/HBC2"]
margin_left = 43.0
margin_right = 139.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="HBC3" type="HBoxContainer" parent="PC/VBC"]
margin_top = 48.0
margin_right = 139.0
margin_bottom = 68.0

[node name="CredLabel" type="Label" parent="PC/VBC/HBC3"]
margin_right = 44.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Cred:"

[node name="Cred" type="Label" parent="PC/VBC/HBC3"]
margin_left = 48.0
margin_right = 139.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
